updated garden config

--- a/garden.yml
+++ b/garden.yml
@@ -1,16 +1,12 @@
+# garden.yml
 kind: Project
 name: flask-app
 environments:
 - name: dev
   providers:
   - name: kubernetes
-    context: gke_fullstackgcp_us-central1-c_my-cluster
-    deploymentRegistry:
-      # The hostname of the registry, e.g. gcr.io for GCR (Google Container Registry)
-      hostname: gcr.io
-      # Namespace (aka project ID) to use in the registry for this project.
-      # For GKE/GCR, use the project ID where your cluster is.
-      namespace: fullstackgcp
+    context: gke_fullstackgcp_us-central1-c_dev-cluster
+    buildMode: cluster-docker
 defaultEnvironment: dev
 
 ---
